                   and rcsb_chem_comp_target. Add convenience category rcsb_entry_info in pdbx_core core_entry
                   collection.  Include correspondence details for DrugBank and CCDC/CSD.
                   Add dictionary methods to filter core entry objects by experiment type to
                   remove largely vacuous categories.  Add new CLI entry point for schema generation.
27-Nov-2018    V0.27 resolve inconsistent handling of multiple sources for antibody molecule types. Add
                   dictionary method rcsb_file_block_by_method add item pdbx_chem_comp_audit.ordinal to replace
                   the primary key for this category.    Add new mechanism to inject private document key
                   attributes to support Solr access and indexing.  (Feature branch  multisourcefix). Extend
                   repository holdings collection with prerelease sequences and extended content types for
                   the current repository state.
28-Nov-2018    V0.28 minor update to FASTA sequence content type to repository holdings current inventory and
               adjustments in constraints for rcsb_entry_info category production
30-Nov-2018    V0.29 branch birdconsolidate includes mashup of all BIRD definition data, additional content
               types in current repository holdings with adjustments to filter obsolete entries, various
               additional categories added to core entry collection.
 1-Dec-2018    V0.30  Adjustments for roundtrip CI/CD
 2-Dec-2018    V0.31 Fixes for expansion of semi-colon separated value types, add methods to
               include NCBI scientific and common names.
 3-Dec-2018.   V0.32 interim update for troubleshooting entity collection load issues, adding search indices
               for core collections, adding optional private identifier chemical component identifiers for non-polymer
               entities, adjustments to bird core citation schema.
